# cg-learning-journal

./: .gitignore  DEPLOYMENT-NOTES.md  SITE-ARCHITECTURE.md  _config.yml  index.html
.github/ISSUE_TEMPLATE/: todos-for-week-3.md
_creative_works/: TEMPLATE.md
_data/: navigation.yml  podcast_shows.yml  podcast_topics.yml
_includes/: head-custom.html  head.html  masthead.html  scripts.html
_includes/head/: custom.html
_includes/site/: collection-panel.html  footer.html  header.html
_layouts/: default.html  home.html  single.html
_pages/: about.md  creative-works.md  podcast-notes.md  podcast-shows.md  podcast-topics.md  reading-notes.md  vfx-learning.md
_podcast_notes/: 2025-02-example.md  TEMPLATE.md
_posts/: .template.md  2025-05-25-week-1-view-transform.md  2025-05-26-cmake-vs-make.md  2025-05-26-notes-cmake-vs-make.md  2025-05-30-week-2-shader-playground.md  2025-05-31-VAO-and-VBO.md  2025-06-07-week-3-Lambertian-model.md  2025-06-08-week-3-Lambertian-model.md  2025-06-09-gitf-viewer-tutorial-debug.md  2025-06-09-gltf-viewer-tutorial-debug.md  2025-06-15-Week-4-Asset-Loader.md  2025-06-18-Transform-Normals.md
_reading_notes/: TEMPLATE.md
_sass/: minimal-mistakes.scss
_sass/custom/: theme-toggle.scss
_sass/minimal-mistakes/: _custom.scss
_sass/site/: _animations.scss  _base.scss  _components.scss  _layout.scss  _tokens.scss
assets/css/: custom.css  main.scss
assets/js/: site.js  theme-toggle.js
assets/musab/: site.css  site.js
learning-log/: 2025-06-04.md  2025-06-05.md  2025-06-06.md  2025-06-07.md  2025-06-08.md  2025-06-09.md  2025-06-10.md  2025-06-11.md  2025-06-12.md  2025-06-13.md  2025-06-15.md  2025-06-16.md  2025-06-17.md  2025-06-18.md  2025-06-19.md  2025-06-20.md  2025-06-22.md  2025-06-23.md  2025-06-24.md  2025-06-25.md
pages/: learning-journal.md
projects/.template/src/: main.cpp
projects/w1-view-transform/: CMakeLists.txt
projects/w1-view-transform/shaders/: fragment.glsl
projects/w1-view-transform/src/: main.cpp
projects/w2-shader-playground/: CMakeLists.txt  rebuild.sh
projects/w2-shader-playground/shaders/: 01_checker.glsl  fragment.glsl  vertex.glsl
projects/w2-shader-playground/src/: glad.c  main.cpp
projects/w3-lambertian-model/: CMakeLists.txt
projects/w3-lambertian-model/src/: main.cpp
projects/w4-asset-validation-tool/: CMakeLists.txt
projects/w4-asset-validation-tool/include/: AssetLoader.h  Validator.h  camera.h  shader.h
projects/w4-asset-validation-tool/shaders/: basic.vert  lambert1.frag  lambert2.frag
projects/w4-asset-validation-tool/src/: AssetLoader.cpp  Validator.cpp  camera.cpp  main.cpp  shader.cpp
projects/w5-asset-val-tool/: CMakeLists.txt  vcpkg.json
projects/w5-asset-val-tool/include/: AssetLoader.h  Reporter.h  ValidationConfig.h  ValidationResult.h  Validator.h
projects/w5-asset-val-tool/src/: AssetLoader.cpp  ValidateConfig.cpp  Validator.cpp  main.cpp
projects/w6-metal-triangle/MetalTriangle/MetalTriangle/: main.mm
projects/w6-metal-triangle/MetalTriangle/MetalTriangle.xcodeproj/: project.pbxproj
projects/w6-metal-triangle/MetalTriangle/MetalTriangle.xcodeproj/project.xcworkspace/xcuserdata/shutingyang.xcuserdatad/: UserInterfaceState.xcuserstate
projects/w7-learn-opengl/: CMakeCache.txt  CMakeLists.txt  README.md
projects/w7-learn-opengl/include/glad/: glad.h
projects/w7-learn-opengl/shaders/: fragment.glsl  vertex.glsl
projects/w7-learn-opengl/src/: main.cpp
